--- a/notes.org
+++ b/notes.org
@@ -1,3 +1,8 @@
 #+TITLE: Notes
 
 At least on Fedora installing ganache needed python to be 2.7
+
+#+begin_src shell
+sudo dnf install python2.7
+alias python=/usr/bin/python2.7
+#+end_src
